[package]
name = "pi_style"
version = "0.1.17"
authors = ["suncy <@gmail.com>"]
edition = "2021"
description = "css struct define and parse"
repository = "https://github.com/GaiaWorld/pi_style"
license = "MIT OR Apache-2.0"
keywords = ["pi", "style", "css"]

[dependencies]
num-traits = "0.2"
smallvec={version = "1.8", features = ["serde"]}
bitvec={version = "1.0", features = ["serde"]}
ordered-float = { version = "3.0", default-features = false, features = ["serde"] }
nalgebra = {version = "0.32", features = ["serde", "serde-serialize"]}
parry2d = {version = "0.13", features = ["serde-serialize"]}
derive_deref = "1.1"
serde = { version = "1.0", features = ["derive"] }
cssparser = "0.29"
log="0.4"
paste = "1.0"
lazy_static = "1.4"
pi_slotmap = "0.1"
pi_share="0.4"
pi_atom={version="0.5", features = ["serde"]}
pi_enum_default_macro="0.1"
pi_hash="0.1"
# pi_flex_layout = { git = "https://github.com/GaiaWorld/pi_flex_layout.git" }
pi_flex_layout = "0.2"
# pi_ecs = { git = "https://github.com/GaiaWorld/pi_ecs.git" }
pi_curves = {version = "0.1", registry = "yn"}
pi_animation = {version = "0.1", registry = "yn"}
thiserror = "1.0"

pi_print_any="0.1"

# [patch."https://github.com/GaiaWorld/pi_curves"]
# pi_curves  = {path="../../pi_curves"}

# [patch."https://github.com/GaiaWorld/pi_animation"]
# pi_animation = { path="../../pi_animation"}

[patch.crates-io]
# pi_flex_layout = {path = "../pi_flex_layout"}

[dev-dependencies]
env_logger = "0.9"

